add status tags; dateModified property to JobPost